# 42sh

./: .gitignore  meson.build  meson_options.txt
.github/scripts/: check_formatting.sh
.github/workflows/: formatting.yml  meson.yml
include/: ast.h  execution.h  lexer.h  parser.h  std.h  xalloc.h
src/: README.md  main.c  meson.build  parser_tests.c
src/ast/: ast_and.c  ast_brace.c  ast_case.c  ast_cmd.c  ast_for.c  ast_func.c  ast_if.c  ast_list.c  ast_not.c  ast_or.c  ast_pipe.c  ast_redir.c  ast_representation.c  ast_subshell.c  ast_until.c  ast_while.c  meson.build
src/builtins/: builtin_alias.c  builtin_cd.c  builtin_dot.c  builtin_echo.c  builtin_export.c  builtin_unset.c  meson.build
src/dep/: dep.c  dep.h  meson.build
src/execution/: builtin_echo.c  exec_alias.c  exec_builtins.c  exec_cmd.c  exec_pipeline.c  exec_redir.c  meson.build
src/expansion/: arithmetic_expansion.c  command_substitution.c  evalexpr.c  fifo_basic.c  fifo_hard.c  fifo_medium.c  handler.c  helper.c  meson.build  parameter_expansion.c  stack.c  tilde_expansion.c
src/global/: global.c
src/include/: alias.h  ast.h  builtins.h  evalexpr.h  execution.h  expansions.h  global.h  lexer.h  main.h  parser.h  xalloc.h
src/lexer/: lexer_add_token.c  lexer_eat_arithmetics_expansion.c  lexer_eat_backquotes.c  lexer_eat_backslash.c  lexer_eat_command_substitution.c  lexer_eat_comment.c  lexer_eat_parameter_expansion.c  lexer_eat_parameter_expansion_braces.c  lexer_eat_quotes.c  lexer_get_next_token.c  lexer_get_next_token_scl.c  lexer_get_tokens.c  lexer_init.c  lexer_is_token.c  lexer_is_token_prefix.c  lexer_utils.c  meson.build
src/parser/: meson.build  parser_and_or.c  parser_case_clause.c  parser_case_item.c  parser_command.c  parser_compound_list.c  parser_element.c  parser_funcdec.c  parser_get_token.c  parser_input.c  parser_list.c  parser_pipeline.c  parser_redirection.c  parser_rule_case.c  parser_rule_elif.c  parser_rule_else_clause.c  parser_rule_for.c  parser_rule_if.c  parser_rule_until.c  parser_rule_while.c  parser_shell_command.c  parser_simple_command.c
src/utils/: execution_utils.c  list_dup.c  meson.build  parser_utils.c  xalloc.c
tests/: README.md  main.c  meson.build  meson_options.txt
tests/execution/: execution_tests.c  meson.build
tests/lexer/: lexer_aliases_tests.c  lexer_scl_tests.c  lexer_tests.c  lexer_tests_common.h  lexer_tokens_recog_test.c  lexer_yolo_tests.c  meson.build
tests/parser/: meson.build  parser_tests.c
tests/src/: main.c  meson.build
tests/src/ast/: ast_and.c  ast_brace.c  ast_case.c  ast_cmd.c  ast_if.c  ast_not.c  ast_redir.c  ast_while.c  meson.build
tests/src/builtins/: builtin_alias.c  builtin_cd.c  builtin_export.c  builtin_unset.c  meson.build
tests/src/execution/: exec_builtins.c
tests/src/global/: meson.build
tests/src/include/: builtins.h  global.h  lexer.h  parser.h
tests/src/lexer/: lexer_eat_parameter_expansion.c
tests/src/parser/: meson.build  parser_case_clause.c  parser_funcdec.c  parser_get_token.c  parser_rule_case.c  parser_rule_elif.c  parser_rule_else_clause.c  parser_rule_if.c  parser_rule_while.c
tests/src/utils/: meson.build  parser_utils.c
tests/tests/: main.c
tests/tests/execution/: aliases_tests.c  meson.build
tests/tests/lexer/: lexer_aliases_tests.c  lexer_scl_tests.c  lexer_yolo_tests.c
tests/tests/xalloc/: meson.build
tests/xalloc/: xalloc_tests.c
