sources += files('lexer_add_token.c', 'lexer_eat_arithmetics_expansion.c', 'lexer_eat_backquotes.c',
'lexer_eat_backslash.c', 'lexer_eat_command_substitution.c', 'lexer_eat_comment.c', 'lexer_eat_parameter_expansion.c',
'lexer_eat_parameter_expansion_braces.c', 'lexer_eat_quotes.c', 'lexer_get_tokens.c', 'lexer_is_token.c')