sources += files('parser_get_token.c', 'parser_input.c', 'parser_command.c'
, 'parser_list.c', 'parser_pipeline.c', 'parser_simple_command.c',
'parser_and_or.c', 'parser_element.c', 'parser_compound_list.c', 'parser_rule_else_clause.c',
'parser_rule_if.c', 'parser_shell_command.c', 'parser_rule_elif.c',
'parser_redirection.c', 'parser_rule_until.c', 'parser_rule_while.c', 'parser_rule_for.c')